Split routes between thegraph implementation and the rest
