# src/controllers/v2/farm.controller.ts
@@ -5,18 +5,38 @@ import { Farm, FarmsPage } from '@/interfaces/types';
 class FarmController {
   private farmService = new FarmService();
 
+  public getFarmsFromTheGraph = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
+    try {
+      const offset = parseInt(req.query.offset as string) || 0;
+      const limit = parseInt(req.query.limit as string) || 10;
+
+      const farmsPage: FarmsPage = await this.farmService.getFarmsFromTheGraph(offset, limit);
+
+      res.status(200).json(farmsPage);
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  public getFarmFromTheGraph = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
+    try {
+      const farmId = req.params.farmId as string;
+      const masterchef = req.params.masterchef as string;
+
+      const farm: Farm = await this.farmService.getFarmFromTheGraph(farmId, masterchef);
+
+      res.status(200).json(farm);
+    } catch (error) {
+      next(error);
+    }
+  };
+
   public getFarms = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
     try {
       const offset = parseInt(req.query.offset as string) || 0;
       const limit = parseInt(req.query.limit as string) || 10;
-      const source = req.query.source as string;
 
-      let farmsPage: FarmsPage;
-      if (source === 'thegraph') {
-        farmsPage = await this.farmService.getFarmsFromTheGraph(offset, limit);
-      } else {
-        farmsPage = await this.farmService.getFarmsFromYieldMonitor(offset, limit);
-      }
+      const farmsPage: FarmsPage = await this.farmService.getFarmsFromYieldMonitor(offset, limit);
 
       res.status(200).json(farmsPage);
     } catch (error) {
@@ -27,14 +47,8 @@ class FarmController {
   public getFarm = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
     try {
       const farmId = req.params.farmId as string;
-      const source = req.query.source as string;
 
-      let farm: Farm;
-      if (source === 'thegraph') {
-        farm = await this.farmService.getFarmFromTheGraph(farmId);
-      } else {
-        farm = await this.farmService.getFarmFromYieldMonitor(farmId);
-      }
+      const farm: Farm = await this.farmService.getFarmFromYieldMonitor(farmId);
 
       res.status(200).json(farm);
     } catch (error) {
